--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.3.0",
+    "html-loader": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -41,8 +42,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
