--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "eslint-config": "^0.3.0",
     "graphql": "^16.3.0",
     "html-loader": "^3.1.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.8.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^7.0.0",
     "eslint-config-standard": "^16.0.3",
